changed code to fix some use cases